--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,17 @@
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+/* general styles */
+body{
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    /* general project styles */
+    color: #3a3a3a;
+}
 
 /* header */
 header {
@@ -7,6 +21,8 @@ header {
 /* main content */
 main {
     background-color: lightblue;
+    /* allows main to grow and fill the space */
+    flex: 1 0 auto;
 }
 
 /* footer */
