--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,6 @@
+/* google font import */
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Oswald:wght@200..700&display=swap');
+
 * {
     padding: 0;
     margin: 0;
@@ -11,6 +14,7 @@ body{
     flex-direction: column;
     /* general project styles */
     color: #3a3a3a;
+    font-family: 'Lato', sans-serif;
 }
 
 /* header */
