--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -22,6 +22,10 @@ header {
     background-color: lightcoral;
 }
 
+h1 {
+    font-family: 'Oswald', sans-serif;
+}
+
 /* main content */
 main {
     background-color: lightblue;
