changed to source code for project class just to have the same for 100%

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,26 +1,27 @@
-/* google font import */
-@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Oswald:wght@200..700&display=swap');
+/* Google fonts import */
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald:wght@200;300;400;500;600;700&display=swap');
 
+/* Asterisk wildcard selector to override default styles added by the browser */
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
 
-/* general styles */
-body{
+/* General styles */
+body {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
-    /* general project styles */
+    /* Generic project styles */
     color: #3a3a3a;
     font-family: 'Lato', sans-serif;
 }
 
-/* header */
+/* Header */
 header {
     background-color: #ffffff;
-    padding: 1rem;
+    padding: 0 1rem;
     position: fixed;
     z-index: 99;
     width: 100%;
@@ -57,21 +58,19 @@ h1 {
 }
 
 /* Navbar styles with dropdown toggle */
-
 nav {
     position: absolute;
     background-color: #ffffff;
     width: 100%;
     left: 0;
-    padding-top: 0 1rem;
+    padding: 0 1rem;
     box-shadow: 0 2px 2px #3a3a3a;
     display: none;
     top: 100%;
 }
 
-/* Nav Toggle */
-
-#nav-toggle:checked ~ nav {
+/* Nav toggle */
+#nav-toggle:checked~nav {
     display: block;
 }
 
@@ -82,14 +81,16 @@ nav {
 .nav-toggle-label {
     font-size: 2rem;
 }
-/* main content */
+
+/* Main content */
 main {
     background-color: lightblue;
-    /* allows main to grow and fill the space */
+    /* Make main element take up any surplus space to push footer down */
     flex: 1 0 auto;
+    margin-top: 47px;
 }
 
-/* footer */
+/* Footer */
 footer {
     background-color: orange;
 }
